--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   #nav form { display: inline; }
   #nav input { background-color: transparent; border: none; color: rgb(32, 80, 162); padding: 0 2em; cursor: pointer; }
 </style>
-<meta name="description" content="Taosi - Questions and concise answers."/>
+<meta name="description" content="Taosi blog."/>
 <meta name=”robots” content="index, follow"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="keywords" content="Questions, Answers, Blog"/>
