--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   h1 { font-weight: lighter; font-family: Header; letter-spacing: 0.2em; font-variant: small-caps; }
   h1 a, h1 a:hover, h1 a:visited { color: #222; }
   input, textarea { padding: 1em; }
-  #content { width: 42em; text-align: left; margin: 0 auto; border-left: 1px solid #ccc; padding: 0 1em; }
+  #content { max-width: 42em; text-align: left; margin: 0 auto; border-left: 1px solid #ccc; padding: 0 1em; }
   a, a:hover, a:visited { color: rgb(32, 80, 162); text-decoration: none; }
   #nav { margin-top: 1em; }
   #nav a { padding: 0 2em; }
