--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
 {% if logged_in %}
   <div id="nav">
     <a href="/">Articles</a>
+    <a href="/referrers">Referrers</a>
     <a href="/new_article">New Article</a>
   </div>
 {% endif %}
