taosi -> factoid add user accounts

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,35 +4,50 @@
     font-family: Header;
     src: url(/Philosopher-Regular.ttf);
   }
+  * { box-sizing: border-box; }
   html { background-color: #eee; color: #222; }
   body { text-align: center; font-family: arial; }
   h1 { font-weight: lighter; font-family: Header; letter-spacing: 0.2em; font-variant: small-caps; }
   h1 a, h1 a:hover, h1 a:visited { color: #222; }
   table { border-collapse: collapse; margin: 1em auto; }
   th, td { border: 1px solid #ddd; padding: 0.5em; }
+  .center { text-align: center; }
+  input.wide { width: 100%; }
   input, textarea { padding: 1em; }
-  #content { max-width: 42em; text-align: left; margin: 0 auto; border-left: 1px solid #ccc; padding: 0 1em; }
+  #content { max-width: 42em; text-align: left; margin: 0 auto; padding: 0 1em; }
+  #content.border { border-left: 1px solid #ccc; }
   a, a:hover, a:visited { color: rgb(32, 80, 162); text-decoration: none; }
   #nav { margin-top: 1em; }
   #nav a { padding: 0 2em; }
   #nav form { display: inline; }
-  #nav input { background-color: transparent; border: none; color: rgb(32, 80, 162); padding: 0 2em; cursor: pointer; }
+  #nav input { font-size: 16px; background-color: transparent; border: none; color: rgb(32, 80, 162); padding: 0 2em; cursor: pointer; }
 </style>
-<meta name="description" content="Taosi.org blog."/>
+<meta name="description" content="Factoid.info - Questions and answers."/>
 <meta name=”robots” content="index, follow"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="keywords" content="Questions, Answers, Blog"/>
 <meta charset="UTF-8"/>
 {% block head %}{% endblock %}
-<title>Taosi</title>
-{% if logged_in %}
-  <div id="nav">
-    <a href="/">Articles</a>
-    <a href="/referrers">Referrers</a>
-    <a href="/new_article">New Article</a>
-  </div>
-{% endif %}
-<h1><a href="/">Taosi</a></h1>
-<div id="content">
+<title>Factoid</title>
+<div id="nav">
+  <a href="/{{ tr['language'] }}/">{{ tr['new_question'] }}</a>
+  <a href="/{{ tr['language'] }}/browse">{{ tr['browse_questions'] }}</a>
+  <a href="/{{ tr['language'] }}/mine">{{ tr['my_questions'] }}</a>
+  {% if user %}
+    {% if user.admin %}
+      <a href="/{{ tr['language'] }}/referrers">{{ tr['referrers'] }}</a>
+    {% endif %}
+    <a href="/{{ tr['language'] }}/settings">{{ tr['settings'] }}</a>
+    <form action="/{{ tr['language'] }}/logout" method="post">
+      {{ csrf|safe }}
+      <input type="submit" value="{{ tr['logout'] }}"/>
+    </form>
+  {% else %}
+    <a href="/{{ tr['language'] }}/register">{{ tr['sign_up'] }}</a>
+    <a href="/{{ tr['language'] }}/login">{{ tr['login'] }}</a>
+  {% endif %}
+</div>
+<h1>Factoid</h1>
+<div id="content" class="{% block border %}{% endblock %}">
 {% block content %}{% endblock %}
 </div>
