add redirect for /article url and add adsense

--- a/templates/question.html
+++ b/templates/question.html
@@ -9,6 +9,8 @@
       }
       setInterval(refresh_if_ready, 1000);
     </script>
+  {% else %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1450811528932834" crossorigin="anonymous"></script>
   {% endif %}
 {% endblock %}
 {% block border %}border{% endblock %}
