add nowrap to nav elements

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
   #content.border { border-left: 1px solid #ccc; }
   a, a:hover, a:visited { color: rgb(32, 80, 162); text-decoration: none; }
   #nav { margin-top: 1em; }
-  #nav a { padding: 0 2em; }
+  #nav a { padding: 0 2em; white-space: nowrap; }
   #nav form { display: inline; }
-  #nav input { font-size: 16px; background-color: transparent; border: none; color: rgb(32, 80, 162); padding: 0 2em; cursor: pointer; }
+  #nav input { white-space: nowrap; font-size: 16px; background-color: transparent; border: none; color: rgb(32, 80, 162); padding: 0 2em; cursor: pointer; }
 </style>
 <meta name="description" content="Factoid.info - Questions and answers."/>
 <meta name=”robots” content="index, follow"/>
