--- a/templates/browse.html
+++ b/templates/browse.html
@@ -3,9 +3,13 @@
   {% if message %}
     <p>{{ message }}</p>
   {% endif %}
-  <ul>
-    {% for question in questions %}
-      <li><a href="/{{ tr['language'] }}/question/{{ question.slug }}">{{ question.question }}</a></li>
-    {% endfor %}
-  </ul>
+  {% if not questions %}
+    <p>{{ tr['no_questions'] }}</p>
+  {% else %}
+    <ul>
+      {% for question in questions %}
+        <li><a href="/{{ tr['language'] }}/question/{{ question.slug }}">{{ question.question }}</a></li>
+      {% endfor %}
+    </ul>
+  {% endif %}
 {% endblock %}
