add center to no questions message

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -4,7 +4,7 @@
     <p>{{ message }}</p>
   {% endif %}
   {% if not questions %}
-    <p>{{ tr['no_questions'] }}</p>
+    <p class="center">{{ tr['no_questions'] }}</p>
   {% else %}
     <ul>
       {% for question in questions %}
