--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
 <div id="nav">
   <a href="/{{ tr['language'] }}/">{{ tr['new_question'] }}</a>
   <a href="/{{ tr['language'] }}/browse">{{ tr['browse_questions'] }}</a>
+  <a href="/{{ tr['language'] }}/about">{{ tr['about'] }}</a>
   {% if user %}
     <a href="/{{ tr['language'] }}/mine">{{ tr['my_questions'] }}</a>
     {% if user.admin %}
