--- a/templates/question.html
+++ b/templates/question.html
@@ -23,6 +23,11 @@
   {% if question.answer is none %}
     <p>Loading... This usually takes under 10 seconds.</p>
   {% endif %}
+  <form class="center" action="/{{ tr['language'] }}/" method="post">
+    {{ csrf|safe }}
+    <p><input name="question" class="wide" placeholder="{{ tr['example_question'] }}"/></p>
+    <p><input type="submit" value="{{ tr['ask_question_button'] }}"/></p>
+  </form>
   {% if user.admin %}
     <form action="/{{ tr['language'] }}/question/{{ question.slug }}" method="post">
       {{ csrf|safe }}
