--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-  <form class="center" action="/{{ tr['language'] }}/" method="post">
+  <form class="center" action="/" method="post">
     {% if message %}
       <p>{{ message }}</p>
     {% endif %}
