--- a/templates/question.html
+++ b/templates/question.html
@@ -24,21 +24,21 @@
     <p>Loading... This usually takes under 10 seconds.</p>
   {% endif %}
   <hr/>
-  <form class="center" action="/{{ tr['language'] }}/" method="post">
+  <form class="center" action="/" method="post">
     {{ csrf|safe }}
     <p><input name="question" class="wide" placeholder="{{ tr['example_question'] }}"/></p>
     <p><input type="submit" value="{{ tr['ask_question_button'] }}"/></p>
   </form>
   {% if user.admin %}
     <hr/>
-    <form action="/{{ tr['language'] }}/question/{{ question.slug }}" method="post">
+    <form action="/question/{{ question.slug }}" method="post">
       {{ csrf|safe }}
       <p><input name="question" size="50" value="{{ question.question }}" placeholder="Question"/></p>
       <p><input name="slug" size="50" value="{{ question.slug }}" placeholder="Slug"/></p>
       <p><textarea name="answer" rows="25" cols="50">{% if question.answer is not none %}{{ question.answer }}{% endif %}</textarea></p>
       <p><input type="submit" value="Submit Changes"/></p>
     </form>
-    <form action="/{{ tr['language'] }}/question/{{ question.slug }}/delete" method="post">
+    <form action="/question/{{ question.slug }}/delete" method="post">
       {{ csrf|safe }}
       <p><input type="submit" value="Delete Question"/></p>
     </form>
