--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<form class="center" action="" method="post">
+<form class="center" action="/settings" method="post">
   {% if message %}
     <p>{{ message }}</p>
   {% endif %}
