add most recent questions to homepage

--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -8,4 +8,10 @@
     <p><input name="question" class="wide" placeholder="{{ tr['example_question'] }}"/></p>
     <p><input type="submit" value="{{ tr['ask_question_button'] }}"/></p>
   </form>
+  <p>{{ tr['most_recent'] }}</p>
+  <ul>
+    {% for question in questions %}
+      <li><a href="/question/{{ question.slug }}">{{ question.question }}</a></li>
+    {% endfor %}
+  </ul>
 {% endblock %}
