add border and padding and background color to #nav

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   }
   * { box-sizing: border-box; }
   html { background-color: #eee; color: #222; }
-  body { text-align: center; font-family: arial; }
+  body { text-align: center; font-family: arial; margin: 0; }
   h1 { font-weight: lighter; font-family: Header; letter-spacing: 0.2em; font-variant: small-caps; }
   h1 a, h1 a:hover, h1 a:visited { color: #222; }
   table { border-collapse: collapse; margin: 1em auto; }
@@ -17,7 +17,7 @@
   #content { max-width: 42em; text-align: left; margin: 0 auto; padding: 0 1em; }
   #content.border { border-left: 1px solid #ccc; }
   a, a:hover, a:visited { color: rgb(32, 80, 162); text-decoration: none; }
-  #nav { margin-top: 1em; }
+  #nav { padding: 1em; background-color: #ccc; border-bottom: 1px solid #666; }
   #nav a { padding: 0 2em; white-space: nowrap; }
   #nav form { display: inline; }
   #nav input { white-space: nowrap; font-size: 16px; background-color: transparent; border: none; color: rgb(32, 80, 162); padding: 0 2em; cursor: pointer; }
